<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_scheduleAndAddress"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/confirmMassage_locationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/confirmMassage_locationText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_location"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/massage_location"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/confirmMassage_dateTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/confirmMassage_dateTimeText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_menu_list"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/massage_dateTime"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/massage_orderDetails"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_yourGender"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/confirmMassage_yourGenderText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:textColor="@color/material_light_black"
                android:textSize="18sp"
                tools:text="Male" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_massageType"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/confirmMassage_massageTypeText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:textColor="@color/material_light_black"
                android:textSize="18sp"
                tools:text="Full Body Massage" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_duration"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/confirmMassage_durationText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:textColor="@color/material_light_black"
                android:textSize="18sp"
                tools:text="120 minutes" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_therapistPreference"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/confirmMassage_therapistPrefsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:textColor="@color/material_light_black"
                android:textSize="18sp"
                tools:text="No Preference" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/massage_additionalNotes"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/confirmMassage_additionalNoteEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:hint="@string/massage_additionalNotes"
                android:singleLine="true"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/confirmMassage_orderDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blueSoft"
                android:clickable="true"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/massage_price"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/confirmMassage_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/massage_cost"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true">

                <RadioGroup
                    android:id="@+id/confirmMassage_paymentGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/material_light_white"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/confirmMassage_mPayPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/text_mPay"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:theme="@style/PaymentButton" />


                    <RadioButton
                        android:id="@+id/confirmMassage_cashPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/text_cash"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:theme="@style/PaymentButton" />

                </RadioGroup>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/confirmMassage_mPayBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="108dp"
                        android:text="@string/text_updating"
                        android:textColor="@color/material_blue_grey_700"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/confirmMassage_topUp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/text_topUp"
                        android:textColor="@color/material_blue_grey_700" />

                    <TextView
                        android:id="@+id/discountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/confirmMassage_mPayBalance"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/ride_discount"
                        android:textColor="@color/material_blue_grey_700"
                        android:textSize="12sp" />

                </RelativeLayout>

            </FrameLayout>

            <Button
                android:id="@+id/confirmMassage_order"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/text_order"
                android:textColor="@color/material_light_white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>