<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/cargo_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:layout_weight="0.5"
    android:background="@drawable/cargo_selector"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/cargo_image"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_weight="0.5"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:src="@drawable/ic_mbox_pickup"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0.5"
        android:paddingTop="35dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cargo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mbox_pickup"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/cargo_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mbox_dimension"
            android:textColor="@color/grey"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/cargo_max_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mbox_maxweight"
            android:textColor="@color/grey"
            android:textSize="13sp"/>

    </LinearLayout>

</LinearLayout>