<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradien"
    android:orientation="vertical">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:scaleType="fitXY"-->
<!--        app:srcCompat="@drawable/bg2"-->
<!--        android:layout_alignParentBottom="true" />-->



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:srcCompat="@drawable/logo500" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="128dp">

        <EditText
            android:id="@+id/signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@+id/signIn_password"
            android:textColor="@color/material_light_white"
            android:textColorHint="@color/material_light_white"
            android:theme="@style/SignInSignUpEditText" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/material_light_white"
            android:textColorHint="@color/material_light_white"
            android:theme="@style/SignInSignUpEditText" />


        <Button
            android:id="@+id/signIn_signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_signIn"
            android:background="@color/material_yellow_600"
            android:textColor="@color/material_light_white"
            android:theme="@style/SignInButton" />

        <LinearLayout
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/sign_up_button" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_signUp"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/signUp_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_dontHaveAccount"
                android:textColor="@color/material_light_white"
                android:textSize="@dimen/signUp_desc" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>